<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ggrilo.millionaireapp.QuestionsActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/askPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAskPublic"/>

        <Button
            android:text="@string/ask5050"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAsk5050"
            android:layout_below="@+id/buttonAskPublic"/>

        <Button
            android:text="@string/askPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAskPhone"
            android:layout_below="@+id/buttonAsk5050"/>



        <TextView
            android:text="@string/questionsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtQuestion"
            android:layout_below="@+id/buttonAskPhone"/>

        <Button
            android:text="@string/answerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAnswerA"
            android:layout_below="@+id/txtQuestion"/>

        <Button
            android:text="@string/answerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAnswerB"
            android:layout_below="@+id/buttonAnswerA"/>

        <Button
            android:text="@string/answerC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAnswerC"
            android:layout_below="@+id/buttonAnswerB"/>

        <Button
            android:text="@string/answerD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAnswerD"
            android:layout_below="@+id/buttonAnswerC"/>
    </RelativeLayout>

</RelativeLayout>
